--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -203,9 +203,7 @@
     "        count += 1\n",
     "        last_block_hash = b.hash()\n",
     "        if count % 2016 == 0:\n",
-    "            print(b.hash().hex())\n",
-    "    if len(headers_message.blocks) < 2000:\n",
-    "        break"
+    "            print(b.hash().hex())"
    ]
   },
   {
@@ -618,7 +616,6 @@
     "    # the number of items at this level is math.ceil(total / 2**(max_depth-depth))\n",
     "    # initialize this level with every item being None\n",
     "    # add this level to the tree\n",
-    "\n",
     "# loop over each level in the merkle tree\n",
     "    # print this level"
    ]
@@ -688,7 +685,7 @@
    "outputs": [],
    "source": [
     "# Merkle Tree Populating Example #2\n",
-    "\n",
+    "reload(helper)\n",
     "from merkleblock import MerkleTree\n",
     "from helper import merkle_parent\n",
     "\n",
@@ -763,6 +760,7 @@
     "from merkleblock import MerkleTree\n",
     "from helper import merkle_parent\n",
     "\n",
+    "num_items = 8\n",
     "hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
     "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
@@ -899,7 +897,6 @@
     "        # navigate up\n",
     "    # else\n",
     "        # get the left hash\n",
-    "        left_hash = tree.get_left_node()\n",
     "        # check to see if we have the left one\n",
     "            # navigate to the left\n",
     "        # else if right node exists\n",
