--- a/session8/complete/session8.ipynb
+++ b/session8/complete/session8.ipynb
@@ -430,9 +430,9 @@
     ")\n",
     "from tx import Tx, TxIn, TxOut\n",
     "\n",
-    "last_block_hex = '0000000000000002ff6a9878658efe0155882b46d8cc93007b3a224afc27bd29'\n",
+    "last_block_hex = '000000000f99f894574cb8361bf4127af7df872973a4d7797e159c5e580c9cfb'\n",
+    "secret = -1  # fill this in\n",
     "\n",
-    "secret = little_endian_to_int(double_sha256(b''))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
     "print(addr)\n",
@@ -443,7 +443,7 @@
     "target_script = p2pkh_script(target_h160)\n",
     "fee = 5000  # fee in satoshis\n",
     "\n",
-    "# connect to tbtc.programmingblockchain.com in testnet mode\n",
+    "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
     "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
@@ -458,91 +458,90 @@
     "\n",
     "# set start block to last_block from above\n",
     "start_block = bytes.fromhex(last_block_hex)\n",
-    "# send a getheaders message with the starting block\n",
-    "getheaders_message = GetHeadersMessage(start_block=start_block)\n",
-    "node.send(getheaders_message.command, getheaders_message.serialize())\n",
+    "# create GetHeadersMessage with this start block\n",
+    "ghm = GetHeadersMessage(start_block=start_block)\n",
+    "# send a getheaders message with the start block\n",
+    "node.send(ghm.command, ghm.serialize())\n",
     "\n",
     "# wait for the headers message\n",
-    "headers_envelope = node.wait_for_commands({HeadersMessage.command})\n",
+    "envelope = node.wait_for_commands([HeadersMessage.command])\n",
     "\n",
     "# get the stream from the headers\n",
-    "stream = headers_envelope.stream()\n",
+    "s = envelope.stream()\n",
     "# parse the headers message\n",
-    "headers = HeadersMessage.parse(stream)\n",
+    "headers_message = HeadersMessage.parse(s)\n",
     "# store the last block as None\n",
     "last_block = None\n",
     "# initialize the GetDataMessage\n",
-    "get_data_message = GetDataMessage()\n",
+    "getdata = GetDataMessage()\n",
     "# loop through the blocks in the headers\n",
-    "for b in headers.blocks:\n",
+    "for block in headers_message.blocks:\n",
     "    # check that the proof of work on the block is valid\n",
-    "    if not b.check_pow():\n",
-    "        raise RuntimeError('proof of work is invalid')\n",
+    "    if not block.check_pow():\n",
+    "        raise RuntimeError\n",
     "    # check that this block's prev_block is the last block\n",
-    "    if last_block is not None and b.prev_block != last_block:\n",
-    "        raise RuntimeErrer('chain broken')\n",
-    "    # add a new item to the get_data_message\n",
-    "    # should be FILTERED_BLOCK_DATA_TYPE and block hash\n",
-    "    get_data_message.add_data(FILTERED_BLOCK_DATA_TYPE, b.hash())\n",
+    "    if last_block is not None and block.prev_block != last_block:\n",
+    "        raise RuntimeError\n",
+    "    # add FILTERED_BLOCK_DATA_TYPE block.hash() to GetDataMessage\n",
+    "    getdata.add_data(FILTERED_BLOCK_DATA_TYPE, block.hash())\n",
     "    # set the last block to the current hash\n",
-    "    last_block = b.hash()\n",
+    "    last_block = block.hash()\n",
     "# send the getdata message\n",
-    "node.send(get_data_message.command, get_data_message.serialize())\n",
+    "node.send(getdata.command, getdata.serialize())\n",
     "\n",
-    "# initialize prev_tx, prev_index and pt to None\n",
-    "prev_tx, prev_index, prev_tx_obj = None, None, None\n",
-    "# loop while prev_tx is None \n",
+    "# initialize prev_tx and prev_index to None\n",
+    "prev_tx, prev_index = None, None\n",
+    "# initialize prev_amount to None\n",
+    "prev_amount = None\n",
+    "# while prev_tx is None \n",
     "while prev_tx is None:\n",
     "    # wait for the merkleblock or tx commands\n",
-    "    envelope = node.wait_for_commands({b'merkleblock', b'tx'})\n",
+    "    envelope = node.wait_for_commands([b'tx', b'merkleblock'])\n",
     "    # initialize the stream from the envelope\n",
-    "    stream = envelope.stream()\n",
+    "    s = envelope.stream()\n",
     "    # if we have the merkleblock command\n",
     "    if envelope.command == b'merkleblock':\n",
     "        # parse the MerkleBlock\n",
-    "        mb = MerkleBlock.parse(stream)\n",
+    "        mb = MerkleBlock.parse(s)\n",
     "        # check that the MerkleBlock is valid\n",
     "        if not mb.is_valid():\n",
-    "            raise RuntimeError('invalid merkle proof')\n",
+    "            raise RuntimeError\n",
     "    # else we have the tx command\n",
     "    else:\n",
     "        # parse the tx\n",
-    "        prev_tx_obj = Tx.parse(stream, testnet=True)\n",
-    "        # loop through the tx outs\n",
-    "        for i, tx_out in enumerate(prev_tx_obj.tx_outs):\n",
-    "            # if our output has the same address as our address we found it\n",
+    "        t = Tx.parse(s)\n",
+    "        # loop through the enumerated tx outs (enumerate(t.tx_outs))\n",
+    "        for i, tx_out in enumerate(t.tx_outs):\n",
+    "            print(tx_out)\n",
+    "            # if our output has the same address as our address (addr) we found it\n",
     "            if tx_out.script_pubkey.address(testnet=True) == addr:\n",
-    "                # we found our utxo. set prev_tx, prev_index, and transaction\n",
-    "                prev_tx = prev_tx_obj.hash()\n",
+    "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
+    "                prev_tx = t.hash()\n",
     "                prev_index = i\n",
-    "                print('found: {}:{}'.format(prev_tx.hex(), prev_index))\n",
+    "                prev_amount = tx_out.amount\n",
     "# create tx_in\n",
-    "tx_in = TxIn(prev_tx, prev_index, b'', 0xffffff)\n",
-    "# set the cache of the previous tx to prev_tx_obj so we don't talk to a block explorer\n",
-    "tx_in.cache[prev_tx] = prev_tx_obj\n",
-    "# create the tx_ins array\n",
-    "tx_ins = [tx_in]\n",
-    "# calculate how much is in this UTXO\n",
-    "total = prev_tx_obj.tx_outs[prev_index].amount\n",
-    "# create a new transaction out to the right address with the right amount (subtract fee)\n",
-    "tx_outs = [TxOut(total-fee, target_script)]\n",
-    "# create a new transaction\n",
-    "tx_obj = Tx(1, tx_ins, tx_outs, 0, testnet=True)\n",
-    "# sign the transaction\n",
-    "tx_obj.sign_input(0, private_key, SIGHASH_ALL)\n",
+    "tx_in = TxIn(prev_tx, i, b'', 0xffffffff)\n",
+    "# calculate the output amount (prev_amount - fee)\n",
+    "output_amount = prev_amount - fee\n",
+    "# create a new TxOut to target_script.serialize() with the output amount\n",
+    "tx_out = TxOut(output_amount, target_script)\n",
+    "# create a new transaction (testnet=True)\n",
+    "t = Tx(1, [tx_in], [tx_out], 0, testnet=True)\n",
+    "# sign the transaction at input 0 with your private key and SIGHASH_ALL\n",
+    "t.sign_input(0, private_key, SIGHASH_ALL)\n",
     "# serialize and hex to see what it looks like\n",
-    "print(tx_obj.serialize().hex())\n",
+    "print(t.serialize().hex())\n",
     "# send this signed transaction on the network\n",
-    "node.send(b'tx', tx_obj.serialize())\n",
+    "node.send(b'tx', t.serialize())\n",
     "# wait a sec so this message goes through to the other node time.sleep(1) \n",
     "time.sleep(1)\n",
     "# now ask for this transaction from the other node\n",
     "# create a GetDataMessage\n",
-    "get_data_message = GetDataMessage()\n",
-    "# ask for our transaction by adding it to the message\n",
-    "get_data_message.add_data(TX_DATA_TYPE, tx_obj.hash())\n",
+    "getdata = GetDataMessage()\n",
+    "# ask for our transaction by adding its hash and TX_DATATYPE to the message\n",
+    "getdata.add_data(TX_DATA_TYPE, t.hash())\n",
     "# send the message\n",
-    "node.send(get_data_message.command, get_data_message.serialize())\n",
+    "node.send(getdata.command, getdata.serialize())\n",
     "# now wait for a response\n",
     "envelope = node.wait_for_commands({b'tx', b'reject'})\n",
     "if envelope.command == b'tx':\n",
