--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -129,7 +129,11 @@
     " * `b'Hello World'`\n",
     " * `b'Goodbye!'`\n",
     "\n",
-    "#### 1.2. Make [this test](/edit/session8/bloomfilter.py) pass."
+    "#### 1.2. Make [this test](/edit/session8/bloomfilter.py) pass:\n",
+    "\n",
+    "```\n",
+    "bloomfilter.py:BloomFilterTest:test_add\n",
+    "```"
    ]
   },
   {
@@ -177,7 +181,11 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "#### 2.1. Make [this test](/edit/session8/bloomfilter.py) pass."
+    "#### 2.1. Make [this test](/edit/session8/bloomfilter.py) pass.\n",
+    "\n",
+    "```\n",
+    "bloomfilter.py:BloomFilterTest:test_filterload\n",
+    "```"
    ]
   },
   {
@@ -198,7 +206,10 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "#### 3.1. Make [this test](/edit/session8/merkleblock.py) pass."
+    "#### 3.1. Make [this test](/edit/session8/merkleblock.py) pass.\n",
+    "```\n",
+    "merkleblock.py:MerkleBlockTest:test_parse\n",
+    "```"
    ]
   },
   {
@@ -219,7 +230,11 @@
    "source": [
     "### Exercise 4\n",
     "\n",
-    "#### 4.1. Make [this test](/edit/session8/network.py) pass."
+    "#### 4.1. Make [this test](/edit/session8/network.py) pass.\n",
+    "\n",
+    "```\n",
+    "network.py:GetDataTest:test_serialize\n",
+    "```"
    ]
   },
   {
@@ -240,7 +255,10 @@
    "source": [
     "### Exercise 5\n",
     "\n",
-    "#### 5.1. Make [this test](/edit/session8/merkleblock.py) pass."
+    "#### 5.1. Make [this test](/edit/session8/merkleblock.py) pass.\n",
+    "```\n",
+    "merkleblock.py:MerkleBlockTest:test_is_valid\n",
+    "```"
    ]
   },
   {
@@ -290,7 +308,7 @@
     ")\n",
     "from tx import Tx, TxIn, TxOut\n",
     "\n",
-    "last_block_hex = '<fill this in>'\n",
+    "last_block_hex = '000000000f99f894574cb8361bf4127af7df872973a4d7797e159c5e580c9cfb'\n",
     "secret = -1  # fill this in\n",
     "\n",
     "private_key = PrivateKey(secret=secret)\n",
@@ -303,7 +321,7 @@
     "target_script = p2pkh_script(target_h160)\n",
     "fee = 5000  # fee in satoshis\n",
     "\n",
-    "# connect to tbtc.programmingblockchain.com in testnet mode\n",
+    "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
     "\n",
     "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
     "# add the h160 to the bloom filter\n",
@@ -312,6 +330,7 @@
     "# load the bloom filter with the filterload command\n",
     "\n",
     "# set start block to last_block from above\n",
+    "# create GetHeadersMessage with this start block\n",
     "# send a getheaders message with the start block\n",
     "\n",
     "# wait for the headers message\n",
@@ -323,12 +342,12 @@
     "# loop through the blocks in the headers\n",
     "    # check that the proof of work on the block is valid\n",
     "    # check that this block's prev_block is the last block\n",
-    "    # add a new item to the get_data_message\n",
-    "    # should be FILTERED_BLOCK_DATA_TYPE and block hash\n",
+    "    # add FILTERED_BLOCK_DATA_TYPE block.hash() to GetDataMessage\n",
     "    # set the last block to the current hash\n",
     "# send the getdata message\n",
     "\n",
-    "# initialize prev_tx, prev_index and pt to None\n",
+    "# initialize prev_tx and prev_index to None\n",
+    "# initialize prev_amount to None\n",
     "# while prev_tx is None \n",
     "    # wait for the merkleblock or tx commands\n",
     "    # initialize the stream from the envelope\n",
@@ -337,23 +356,22 @@
     "        # check that the MerkleBlock is valid\n",
     "    # else we have the tx command\n",
     "        # parse the tx\n",
-    "        # loop through the tx outs\n",
-    "            # if our output has the same address as our address we found it\n",
-    "                # we found our utxo. set prev_tx, prev_index, and transaction\n",
+    "        # loop through the enumerated tx outs (enumerate(t.tx_outs))\n",
+    "            # if our output has the same address as our address (addr) we found it\n",
+    "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
     "# create tx_in\n",
-    "# set the cache of the previous tx to prev_tx_obj so we don't talk to a block explorer\n",
-    "# create the tx_ins array\n",
-    "# calculate how much is in this UTXO\n",
-    "# create a new transaction out to the right address with the right amount (subtract fee)\n",
-    "# create a new transaction\n",
-    "# sign the transaction\n",
+    "# calculate the output amount (prev_amount - fee)\n",
+    "# create a new TxOut to output amount to target_script \n",
+    "# create a new transaction (testnet=True)\n",
+    "# sign the transaction at input 0 with your private key and SIGHASH_ALL\n",
     "# serialize and hex to see what it looks like\n",
     "# send this signed transaction on the network\n",
     "# wait a sec so this message goes through to the other node time.sleep(1) \n",
     "# now ask for this transaction from the other node\n",
     "# create a GetDataMessage\n",
-    "# ask for our transaction by adding it to the message\n",
+    "# ask for our transaction by adding its hash and TX_DATATYPE to the message\n",
     "# send the message\n",
+    "# wait a sec so this message goes through to the other node time.sleep(1) \n",
     "# now wait for a response\n",
     "envelope = node.wait_for_commands({b'tx', b'reject'})\n",
     "if envelope.command == b'tx':\n",
@@ -361,13 +379,6 @@
     "else:\n",
     "    print(envelope.payload)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
