--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -87,12 +87,12 @@
     "    # y = FieldElement(y_raw, prime)\n",
     "    x = FieldElement(x_raw, prime)\n",
     "    y = FieldElement(y_raw, prime)\n",
-    "    # try initializing, RuntimeError means not on curve\n",
+    "    # try initializing, ValueError means not on curve\n",
     "    # p = Point(x, y, a, b)\n",
     "    try:\n",
     "        p = Point(x, y, a, b)\n",
     "        print('({},{}) is on the curve'.format(x_raw, y_raw))\n",
-    "    except RuntimeError:\n",
+    "    except ValueError:\n",
     "        print('({},{}) is not on the curve'.format(x_raw, y_raw))"
    ]
   },
@@ -219,7 +219,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -229,7 +229,7 @@
     "# Exercise 2.2\n",
     "\n",
     "reload(ecc)\n",
-    "run_test(ecc.ECCTest('test_add1'))"
+    "run_test(ecc.ECCTest('test_add'))"
    ]
   },
   {
@@ -265,9 +265,13 @@
     "### Exercise 3\n",
     "\n",
     "#### 3.1. Find the following scalar multiplications on the curve  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
-    "```\n",
-    "2*(192,105), 2*(143,98), 2*(47,71), 4*(47,71), 8*(47,71), 21*(47,71)\n",
-    "```\n",
+    "\n",
+    "* 2*(192,105)\n",
+    "* 2*(143,98)\n",
+    "* 2*(47,71)\n",
+    "* 4*(47,71)\n",
+    "* 8*(47,71)\n",
+    "* 21*(47,71)\n",
     "\n",
     "#### Hint: add the point to itself n times"
    ]
@@ -441,7 +445,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -525,9 +529,11 @@
     "### Exercise 5\n",
     "\n",
     "#### 5.1. Get the public point where the scalar is the following:\n",
-    "```\n",
-    "7, 1485, 2**128, 2**240+2**31\n",
-    "```\n",
+    "\n",
+    "* 7\n",
+    "* 1485\n",
+    "* \\\\(2^{128}\\\\)\n",
+    "* \\\\(2^{240}+2^{31}\\\\)\n",
     "\n",
     "#### 5.2. Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
@@ -575,7 +581,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.169s\n",
+      "Ran 1 test in 0.113s\n",
       "\n",
       "OK\n"
      ]
@@ -688,7 +694,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.135s\n",
+      "Ran 1 test in 0.032s\n",
       "\n",
       "OK\n"
      ]
@@ -733,13 +739,17 @@
     "### Exercise 7\n",
     "\n",
     "#### 7.1. Find the mainnet and testnet addresses corresponding to the private keys:\n",
-    "```\n",
-    "compressed, 888**3\n",
-    "uncompressed, 321\n",
-    "uncompressed, 4242424242\n",
-    "```\n",
+    "\n",
+    "* \\\\(888^3\\\\), compressed\n",
+    "* 321, uncompressed\n",
+    "* 4242424242, uncompressed\n",
     "\n",
     "#### 7.2. Make [this test](/edit/session2/ecc.py) pass\n",
+    "```\n",
+    "helper.py:HelperTest:test_encode_base58_checksum\n",
+    "```\n",
+    "\n",
+    "#### 7.3. Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:S256Test:test_address\n",
     "```"
@@ -770,14 +780,14 @@
     "from helper import double_sha256, encode_base58, hash160\n",
     "\n",
     "components = (\n",
-    "    # (compressed, secret)\n",
-    "    (True, 888**3),\n",
-    "    (False, 321),\n",
-    "    (False, 4242424242),\n",
+    "    # (secret, compressed)\n",
+    "    (888**3, True),\n",
+    "    (321, False),\n",
+    "    (4242424242, False),\n",
     ")\n",
     "\n",
     "# iterate through components\n",
-    "for compressed, secret in components:\n",
+    "for secret, compressed in components:\n",
     "    # get the public point\n",
     "    point = secret * G\n",
     "    # get the sec format\n",
@@ -807,7 +817,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.135s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -815,6 +825,30 @@
    ],
    "source": [
     "# Exercise 7.2\n",
+    "\n",
+    "reload(helper)\n",
+    "run_test(helper.HelperTest('test_encode_base58_checksum'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.030s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 7.3\n",
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.S256Test('test_address'))"
@@ -833,23 +867,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "miKegze5FQNCnGw6PKyqUbYUeBa4x2hFeM\n"
+      "mqYz6JpuKukHzPg94y4XNDdPCEJrNkLQcv\n"
      ]
     }
    ],
    "source": [
     "# Exercise 8.1\n",
     "from ecc import G\n",
+    "from helper import double_sha256, little_endian_to_int\n",
     "\n",
-    "# use your phone number if you can't think of anything\n",
-    "secret = 1800555555518005555555\n",
+    "# use a passphrase\n",
+    "passphrase = b'jimmy@programmingblockchain.com secret passphrase'\n",
+    "secret = little_endian_to_int(double_sha256(passphrase))\n",
     "\n",
     "# get the public point\n",
     "point = secret*G\n",
