--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -38,12 +38,10 @@
     "\n",
     "#### 1.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
-    "```\n",
-    "2+15=?\n",
-    "17+21=?\n",
-    "29-4=?\n",
-    "15-30=?\n",
-    "```\n",
+    "* \\\\(2+15=?\\\\)\n",
+    "* \\\\(17+21=?\\\\)\n",
+    "* \\\\(29-4=?\\\\)\n",
+    "* \\\\(15-30=?\\\\)\n",
     "\n",
     "#### 1.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
@@ -103,13 +101,11 @@
     "\n",
     "#### 2.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
-    "\\\\(24\\cdot19=?\\\\)\n",
+    "* \\\\(24\\cdot19=?\\\\)\n",
+    "* \\\\(17^3=?\\\\)\n",
+    "* \\\\(5^5\\cdot18=?\\\\)\n",
     "\n",
-    "\\\\(17^3=?\\\\)\n",
-    "\n",
-    "\\\\(5^5\\cdot18=?\\\\)\n",
-    "\n",
-    "#### 2.2. Write a program to calculate \\\\(0k, 1k, 2k, 3k, ... 30k\\\\) for some k in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
+    "#### 2.2. Write a program to calculate \\\\(0\\cdot k, 1\\cdot k, 2\\cdot k, 3\\cdot k, ... 30\\cdot k\\\\) for some \\\\(k\\\\) in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
     "\n",
     "#### 2.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
@@ -199,11 +195,9 @@
     "\n",
     "#### 3.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
-    "\\\\(3/24 = ?\\\\)\n",
-    "\n",
-    "\\\\(17^{-3} = ?\\\\)\n",
-    "\n",
-    "\\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
+    "* \\\\(3/24 = ?\\\\)\n",
+    "* \\\\(17^{-3} = ?\\\\)\n",
+    "* \\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
     "\n",
     "#### 3.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "\n",
