--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -65,7 +65,7 @@
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
-    "    # try initializing, RuntimeError means not on curve\n",
+    "    # try initializing, ValueError means not on curve\n",
     "    # p = Point(x, y, a, b)"
    ]
   },
@@ -153,7 +153,7 @@
     "# Exercise 2.2\n",
     "\n",
     "reload(ecc)\n",
-    "run_test(ecc.ECCTest('test_add1'))"
+    "run_test(ecc.ECCTest('test_add'))"
    ]
   },
   {
@@ -181,9 +181,13 @@
     "### Exercise 3\n",
     "\n",
     "#### 3.1. Find the following scalar multiplications on the curve  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
-    "```\n",
-    "2*(192,105), 2*(143,98), 2*(47,71), 4*(47,71), 8*(47,71), 21*(47,71)\n",
-    "```\n",
+    "\n",
+    "* 2*(192,105)\n",
+    "* 2*(143,98)\n",
+    "* 2*(47,71)\n",
+    "* 4*(47,71)\n",
+    "* 8*(47,71)\n",
+    "* 21*(47,71)\n",
     "\n",
     "#### Hint: add the point to itself n times"
    ]
@@ -343,9 +347,11 @@
     "### Exercise 5\n",
     "\n",
     "#### 5.1. Get the public point where the scalar is the following:\n",
-    "```\n",
-    "7, 1485, 2**128, 2**240+2**31\n",
-    "```\n",
+    "\n",
+    "* 7\n",
+    "* 1485\n",
+    "* \\\\(2^{128}\\\\)\n",
+    "* \\\\(2^{240}+2^{31}\\\\)\n",
     "\n",
     "#### 5.2. Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
@@ -475,13 +481,17 @@
     "### Exercise 7\n",
     "\n",
     "#### 7.1. Find the mainnet and testnet addresses corresponding to the private keys:\n",
-    "```\n",
-    "compressed, 888**3\n",
-    "uncompressed, 321\n",
-    "uncompressed, 4242424242\n",
-    "```\n",
+    "\n",
+    "* \\\\(888^3\\\\), compressed\n",
+    "* 321, uncompressed\n",
+    "* 4242424242, uncompressed\n",
     "\n",
     "#### 7.2. Make [this test](/edit/session2/ecc.py) pass\n",
+    "```\n",
+    "helper.py:HelperTest:test_encode_base58_checksum\n",
+    "```\n",
+    "\n",
+    "#### 7.3. Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:S256Test:test_address\n",
     "```"
@@ -499,19 +509,20 @@
     "from helper import double_sha256, encode_base58, hash160\n",
     "\n",
     "components = (\n",
-    "    # (compressed, secret)\n",
-    "    (True, 888**3),\n",
-    "    (False, 321),\n",
-    "    (False, 4242424242),\n",
+    "    # (secret, compressed)\n",
+    "    (888**3, True),\n",
+    "    (321, False),\n",
+    "    (4242424242, False),\n",
     ")\n",
     "\n",
     "# iterate through components\n",
+    "for secret, compressed in components:\n",
     "    # get the public point\n",
     "    # get the sec format\n",
     "    # hash160 the result\n",
     "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
     "        # raw is the prefix + h160\n",
-    "        # get the double_sha256 of raw, first 4 bytes are the checksum\n",
+    "        # get the double_sha256 of the raw, first 4 bytes are the checksum\n",
     "        # append checksum\n",
     "        # encode_base58 the whole thing"
    ]
@@ -523,6 +534,18 @@
    "outputs": [],
    "source": [
     "# Exercise 7.2\n",
+    "\n",
+    "reload(helper)\n",
+    "run_test(helper.HelperTest('test_encode_base58_checksum'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 7.3\n",
     "\n",
     "reload(ecc)\n",
     "run_test(ecc.S256Test('test_address'))"
@@ -547,11 +570,16 @@
    "source": [
     "# Exercise 8.1\n",
     "from ecc import G\n",
+    "from helper import double_sha256, little_endian_to_int\n",
     "\n",
-    "# use your phone number if you can't think of anything\n",
+    "# use a passphrase\n",
+    "passphrase = b'<your email> <optional passphrase>'\n",
+    "secret = little_endian_to_int(double_sha256(passphrase))\n",
     "\n",
     "# get the public point\n",
-    "# if you completed 7.2, just do the .address(testnet=True) method on the public point"
+    "point = secret*G\n",
+    "# if you completed 7.2, just do the .address(testnet=True) method on the public point\n",
+    "print(point.address(testnet=True))"
    ]
   }
  ],
