--- a/session5/complete/session5.ipynb
+++ b/session5/complete/session5.ipynb
@@ -247,7 +247,7 @@
     "    raise RuntimeError('Private Key does not correspond to Change Address, check priv_key and change_address')\n",
     "\n",
     "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
-    "if tx_ins[0].script_pubkey(testnet=True).elements[2] != decode_base58(change_address):\n",
+    "if tx_ins[0].script_pubkey(testnet=True).items[2] != decode_base58(change_address):\n",
     "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
@@ -327,7 +327,7 @@
     "tx_obj.sign_input(1, priv, SIGHASH_ALL)\n",
     "\n",
     "# SANITY CHECK: output's script_pubkey is the same one as your address\n",
-    "if tx_ins[0].script_pubkey(testnet=True).elements[2] != decode_base58(priv.point.address(testnet=True)):\n",
+    "if tx_ins[0].script_pubkey(testnet=True).items[2] != decode_base58(priv.point.address(testnet=True)):\n",
     "    raise RuntimeError('Output is not something you can spend with this private key. Check that the prev_tx and prev_index are correct')\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
@@ -588,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
