--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -136,7 +136,7 @@
     "# parse with Script\n",
     "s = Script.parse(script_pubkey)\n",
     "# get the 3rd element, which should be the hash160\n",
-    "h160 = s.elements[2]\n",
+    "h160 = s.items[2]\n",
     "# convert h160 to p2pkh address\n",
     "print(h160_to_p2pkh_address(h160))"
    ]
