--- a/session5/complete/distribute.ipynb
+++ b/session5/complete/distribute.ipynb
@@ -42,7 +42,7 @@
     "    tx_ins.append(TxIn(\n",
     "            prev_tx=prev_tx,\n",
     "            prev_index=prev_index,\n",
-    "            script_sig=b'',\n",
+    "            script_sig=Script([]),\n",
     "            sequence=0xffffffff,\n",
     "        ))\n",
     "# initialize outputs\n",
@@ -128,7 +128,7 @@
     "    tx_ins.append(TxIn(\n",
     "            prev_tx=prev_tx,\n",
     "            prev_index=prev_index,\n",
-    "            script_sig=b'',\n",
+    "            script_sig=Script([]),\n",
     "            sequence=0xffffffff,\n",
     "        ))\n",
     "\n",
